# Multi_Doc_Chat

./: .gitignore  README.md  pyproject.toml
backend/: backend.py  backend.py.bak
backend/utils/: chunk.py  extension.py  hash.py
backend/utils/chat/: chat.py  embedding.py
backend/utils/extractor/: csv_extractor.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py  xlxs_extractor.py
backend/utils/vector_store/: vector_store.py
chroma_data/: chroma.sqlite3
db/: chroma.sqlite3
frontend/: frontend.py  txt.txt
uploads/: group.docx
