[tool.poetry]
name = "multi_doc_chat"
version = "0.1.0"
description = "A FastAPI application for multi-document chat"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pandas = "^1.3.0"
pydantic = "^2.8.2"
python-docx = "^0.8.11"
fastapi = "^0.112.2"
httpx = "^0.27.0"
uvicorn = "^0.30.6"
chromadb = "^0.5.5"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
ollama = "^0.3.1"
python-multipart = "^0.0.9"
streamlit = "^1.37.1"
pypdf = "^4.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"